--- a/src/styles/Card.scss
+++ b/src/styles/Card.scss
@@ -1,7 +1,8 @@
 .card {
-  border: solid 3px red;
+  border: solid 3px lightgreen;
   margin: 1rem;
   border-radius: 1rem;
+  padding: .5rem;
 
   p {
     max-width: 15rem;
@@ -9,7 +10,7 @@
 
   img {
     border-radius: 1rem;
-    min-width: 10rem;
+    max-width: 10rem;
     height: auto;
     opacity: 0.8;
     &:hover {
