--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -2,4 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    a {
+        text-decoration: none;
+        color: whitesmoke;
+        text-align: center;
+    }
 }
