--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -1,3 +1,55 @@
 .nav {
   display: flex;
+  margin-bottom: 2rem;
+  a {
+    opacity: 0.8;
+
+    &:hover {
+      opacity: 1;
+      animation: 0.7s ease-out shake infinite;
+    }
+    img {
+      width: 3rem;
+      height: auto;
+      border-radius: 1rem;
+      margin: 1rem;
+      border: 2px solid lightslategray;
+    }
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
