--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -13,7 +13,8 @@
       height: auto;
       border-radius: 1rem;
       margin: 1rem;
-      border: 2px solid lightslategray;
+      border: 3px solid lightslategray;
+      box-shadow: 3px 2px 8px 2px black;
     }
   }
 }
