--- a/src/styles/Detail.scss
+++ b/src/styles/Detail.scss
@@ -9,8 +9,10 @@
     justify-content: space-evenly;
     width: 100%;
     img {
-      border: 3px solid red;
+      border: 3px solid lightcoral;
       border-radius: 1rem;
+      padding: 0.3rem;
+      box-shadow: 3px 2px 8px 2px black;
     }
     .infos {
       text-align: center;
@@ -20,6 +22,9 @@
       }
     }
   }
+
+  $vav: black;
+  
   .low-part {
     padding: 2rem;
     display: flex;
@@ -34,6 +39,8 @@
       padding: 1rem;
       border-radius: 1rem;
       margin-top: 5rem;
+      font-family: "Montserrat", sans-serif;
+      box-shadow: 3px 2px 8px 2px black;
     }
   }
 }
