--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,10 +1,15 @@
 .home {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    a {
-        text-decoration: none;
-        color: whitesmoke;
-        text-align: center;
-    }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  a {
+    text-decoration: none;
+    color: whitesmoke;
+    text-align: center;
+  }
+
+  button {
+    box-shadow: 3px 2px 8px 2px black;
+    font-family: "Montserrat", sans-serif;
+  }
 }
