--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,7 +1,16 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
+body {
+  margin: 0;
+  background-color: #ff943d;
+  padding: 0;
+}
 .App {
+  margin: 0;
+  padding: 0;
   font-family: "Montserrat", sans-serif;
   text-shadow: 2px 3px 5px black;
   box-sizing: border-box;
+  // background: linear-gradient(to right, #be93c5, #7bc6cc);  width: 100%;
+  // height:100%;
 }
