--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,15 +1,45 @@
 .home {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+  overflow: hidden;
+
   a {
     text-decoration: none;
     color: whitesmoke;
-    text-align: center;
   }
 
-  button {
-    box-shadow: 3px 2px 8px 2px black;
-    font-family: "Montserrat", sans-serif;
+  .enter {
+    width: 20vw;
+    height: 70vh;
+    border: 5px solid lightsalmon;
+    border-bottom: 0;
+    margin-left: 20vw;
+    margin-top: 20vh;
+    background-color: lightcoral;
+    opacity: 0.8;
+    transition: all 1s ease-out;
+
+    h1 {
+      font-size: 2rem;
+      padding: 1rem;
+      text-align: center;
+    }
+    p {
+      font-size: 1rem;
+      text-align: center;
+    }
+    &:hover {
+      opacity: 1;
+      transform: scale(1.2);
+    }
   }
+
+  background-image: url(../assets/homeBG.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
