--- a/src/styles/List.scss
+++ b/src/styles/List.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   flex-wrap: wrap;
   text-align: center;
+  background-color: #FF943D;
 
   a {
     text-decoration: none;
