--- a/src/styles/Detail.scss
+++ b/src/styles/Detail.scss
@@ -44,6 +44,11 @@
     font-family: "Montserrat", sans-serif;
     box-shadow: 3px 2px 8px 2px black;
     cursor: pointer;
+    opacity: 0.7;
+    transition: opacity 1s ease-out;
+    &:hover {
+      opacity: 1;
+    }
 
     a {
       text-decoration: none;
