--- a/src/styles/Detail.scss
+++ b/src/styles/Detail.scss
@@ -5,6 +5,8 @@
   margin: 5rem;
   color: whitesmoke;
   background-color: #ff943d;
+  transition: all 1s ease-in-out;
+  animation: slideInLeft 1s;
 
   .high-part {
     padding: 2rem;
@@ -54,5 +56,16 @@
       text-decoration: none;
       color: black;
     }
+  }
+}
+
+@keyframes slideInLeft {
+  from {
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    transform: translate3d(0, 0, 0);
   }
 }
